--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -12,11 +13,25 @@
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^5.4.2",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "eslint": "^3.10.0",
     "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-react": "^6.6.0"
+    "eslint-plugin-react": "^6.6.0",
+    "html-webpack-plugin": "^2.24.1",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^3.1.2",
+    "react": "^0.13.3",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   }
 }
