--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build"
+    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build",
+    "test": "mocha --require babel-core/register"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -30,6 +31,7 @@
     "karma-mocha": "^1.3.0",
     "mocha": "^3.1.2",
     "react": "^0.13.3",
+    "react-addons-test-utils": "^15.3.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
