--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build",
-    "test": "mocha --require babel-core/register"
+    "test": "node_modules/.bin/karma start"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -24,11 +24,19 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "chai": "^3.5.0",
     "eslint": "^3.10.0",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-react": "^6.6.0",
     "html-webpack-plugin": "^2.24.1",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-webpack": "^1.8.0",
     "mocha": "^3.1.2",
     "react": "^0.13.3",
     "react-addons-test-utils": "^15.3.2",
