--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+
+
+    "build": "set NODE_ENV=production && npm run dev && npm start",
+
+
     "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build",
-    "test": "node_modules/.bin/karma start"
+    "test-win-karma": "./node_modules/.bin/karma start",
+    "test-win": "set NODE_ENV=development && npm run test-win-karma",
+    "test-linux": "export NODE_ENV=development && node_modules/.bin/karma start"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "ejs": "^2.5.2",
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
