--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-
-
-    "build": "set NODE_ENV=production && npm run dev && npm start",
-
-
-    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build",
+    "build": "set NODE_ENV=production&& webpack -p --config webpack.config.js --progress --profile --colors && npm run start",
+    "dev": "set NODE_ENV=development&& webpack-dev-server --devtool eval --progress --colors --content-base build",
     "test-win-karma": "./node_modules/.bin/karma start",
-    "test-win": "set NODE_ENV=development && npm run test-win-karma",
-    "test-linux": "export NODE_ENV=development && node_modules/.bin/karma start"
+    "test-win": "set NODE_ENV=development&& npm run test-win-karma",
+    "test-linux": "export NODE_ENV=development&& node_modules/.bin/karma start"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
