--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.30.6",
+    "react-bootstrap-table": "^2.5.8",
     "react-dom": "^15.3.2",
     "serve-favicon": "~2.3.0"
   },
@@ -44,6 +46,7 @@
     "mocha": "^3.1.2",
     "react": "^0.13.3",
     "react-addons-test-utils": "^15.3.2",
+    "react-bootstrap": "^0.30.6",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
