--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-addons-test-utils": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-hot-loader": "^1.3.0",
+    "should": "^11.1.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
