--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^0.30.6",
     "react-bootstrap-table": "^2.5.8",
     "react-dom": "^15.3.2",
+    "react-modal": "^1.5.2",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
