--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "css-loader": "^0.26.0",
     "eslint": "^3.10.0",
     "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
     "html-webpack-plugin": "^2.24.1",
     "karma": "^1.3.0",
