--- a/package.json
+++ b/package.json
@@ -16,30 +16,35 @@
     "debug": "~2.2.0",
     "ejs": "^2.5.2",
     "express": "~4.14.0",
+    "immutable": "^3.8.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "node-sass": "^3.13.0",
-    "react": "^15.3.2",
+    "react": "^15.4.1",
     "react-bootstrap": "^0.30.6",
     "react-bootstrap-table": "^2.5.8",
-    "react-dom": "^15.3.2",
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-actions": "^1.1.0",
+    "redux-immutable": "^3.0.8",
     "sass-loader": "^4.0.2",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.7",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
     "css-loader": "^0.26.0",
-    "eslint": "^3.10.0",
+    "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.6.0",
+    "eslint-plugin-react": "^6.8.0",
     "html-webpack-plugin": "^2.24.1",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
