--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
+    "start": "set PORT=3000&& set HOST=127.0.0.1&&node app.js",
     "build": "set NODE_ENV=production&& webpack -p --config webpack.config.js --progress --profile --colors && npm run start",
-    "dev": "set NODE_ENV=development&& webpack-dev-server --devtool eval --progress --colors --content-base build",
+    "dev": "set NODE_ENV=development&& set PORT=3000&& set HOST=127.0.0.1&& webpack-dev-server --devtool eval --progress --colors --content-base build",
     "test-win-karma": "./node_modules/.bin/karma start",
     "test-win": "set NODE_ENV=development&& npm run test-win-karma",
     "test-linux": "export NODE_ENV=development&& node_modules/.bin/karma start"
@@ -30,6 +30,7 @@
     "redux": "^3.6.0",
     "redux-actions": "^1.1.0",
     "redux-immutable": "^3.0.8",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^4.0.2",
     "sequelize": "^3.27.0",
     "serve-favicon": "~2.3.0",
