--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "set PORT=3000&& set HOST=127.0.0.1&&node app.js",
+    "start": "set NODE_ENV=development&& set PORT=3000&& set HOST=127.0.0.1&&node app.js",
     "build": "set NODE_ENV=production&& webpack -p --config webpack.config.js --progress --profile --colors && npm run start",
-    "dev": "set NODE_ENV=development&& set PORT=3000&& set HOST=127.0.0.1&& webpack-dev-server --devtool eval --progress --colors --content-base build",
+    "dev-win": "set NODE_ENV=development&& set PORT=3000&& set HOST=127.0.0.1&& webpack-dev-server --devtool eval --progress --colors --content-base build",
+    "dev-linux": "export NODE_ENV=development&& export PORT=3000&& export HOST=127.0.0.1&& webpack-dev-server --devtool eval --progress --colors --content-base build",
     "test-win-karma": "./node_modules/.bin/karma start",
     "test-win": "set NODE_ENV=development&& npm run test-win-karma",
-    "test-linux": "export NODE_ENV=development&& node_modules/.bin/karma start"
+    "test-linux": "export NODE_ENV=development&& node_modules/.bin/karma start-linux",
+    "test-creatDB": "set NODE_ENV=development&& node models/issueTable.js",
+    "test-backend": "set test=true&& set NODE_ENV=development&& set HOST=127.0.0.1&& mocha --compilers js:babel-register ./test/libs"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -37,11 +40,13 @@
     "sync": "^0.2.5"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "css-loader": "^0.26.0",
     "eslint": "^3.11.1",
@@ -58,6 +63,7 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.0",
     "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sinon": "^1.0.5",
     "karma-webpack": "^1.8.0",
     "mocha": "^3.1.2",
     "react": "^0.13.3",
@@ -65,6 +71,7 @@
     "react-bootstrap": "^0.30.6",
     "react-hot-loader": "^1.3.0",
     "should": "^11.1.1",
+    "sinon": "^1.17.6",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
