--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test-win-karma": "./node_modules/.bin/karma start",
     "test-win": "set NODE_ENV=development&& npm run test-win-karma",
     "test-linux": "export NODE_ENV=development&& node_modules/.bin/karma start-linux",
-    "test-creatDB": "set NODE_ENV=development&& node models/issueTable.js",
+    "test-creatDB": "mocha models/issueTable.js",
     "test-backend": "set test=true&& set NODE_ENV=development&& set HOST=127.0.0.1&& mocha --compilers js:babel-register ./test/libs"
   },
   "dependencies": {
