--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "set NODE_ENV=development&& set PORT=3000&& set HOST=127.0.0.1&&node app.js",
-    "build": "set NODE_ENV=production&& webpack -p --config webpack.config.js --progress --profile --colors && npm run start",
+    "start": "export NODE_ENV=development&& export PORT=3000&& export HOST=127.0.0.1&&node app.js",
+    "build": "set NODE_ENV=production&& set PORT=3000&& set HOST=127.0.0.1&& webpack -p --config webpack.config.js --progress --profile --colors && npm run start",
     "dev-win": "set NODE_ENV=development&& set PORT=3000&& set HOST=127.0.0.1&& webpack-dev-server --devtool eval --progress --colors --content-base build",
     "dev-linux": "export NODE_ENV=development&& export PORT=3000&& export HOST=127.0.0.1&& webpack-dev-server --devtool eval --progress --colors --content-base build",
     "test-win-karma": "./node_modules/.bin/karma start",
