--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "scripts": {
     "start": "export NODE_ENV=production&& export PORT=3000&& export HOST=127.0.0.1&& babel-node app.js",
+    "start-dev-linux": "set NODE_ENV=development&& set PORT=3000&& set HOST=127.0.0.1&& babel-node app.js",
+    "start-dev-win": "set NODE_ENV=development&& set PORT=3000&& set HOST=127.0.0.1&& babel-node app.js",
     "build": "export NODE_ENV=production&& export PORT=3000&& export HOST=127.0.0.1&& webpack -p --config webpack.config.js --progress --profile --colors && npm run start",
     "dev-win": "set NODE_ENV=development&& set PORT=3000&& set HOST=127.0.0.1&& webpack-dev-server --devtool eval --progress --colors --content-base build",
     "dev-linux": "export NODE_ENV=development&& export PORT=3000&& export HOST=127.0.0.1&& webpack-dev-server --devtool eval --progress --colors --content-base build",
     "test-win-karma": "./node_modules/.bin/karma start",
     "test-win": "set NODE_ENV=development&& npm run test-win-karma",
-    "test-linux": "export NODE_ENV=development&& node_modules/.bin/karma start-linux",
-    "test-backend": "export test=true&& export NODE_ENV=development&& export HOST=127.0.0.1&& mocha --compilers js:babel-register ./test/libs"
+    "test-linux": "export NODE_ENV=development&& node_modules/.bin/karma start",
+    "test-backend": "export NODE_ENV=development&& export HOST=127.0.0.1&& mocha --compilers js:babel-register ./test/libs",
+    "lint-backend": "eslint app.js ./libs ./models ./routes",
+    "lint-test-backend": "eslint ./test/libs"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
