--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-bootstrap-table": "^2.5.8",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-actions": "^1.1.0",
     "redux-immutable": "^3.0.8",
