--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test-win": "set NODE_ENV=development&& npm run test-win-karma",
     "test-linux": "export NODE_ENV=development&& node_modules/.bin/karma start",
     "test-backend": "export NODE_ENV=development&& export HOST=127.0.0.1&& mocha --compilers js:babel-register ./test/libs",
-    "lint-backend": "eslint app.js ./libs ./models ./routes",
+    "lint-backend": "eslint app.js ./libs ./models ./routes/issue.js",
     "lint-test-backend": "eslint ./test/libs"
   },
   "dependencies": {
